# schedule

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: auth.rs  errors.rs  gcal.rs  lib.rs  main.rs  s24.rs  util.rs
