[package]
name = "schedule"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-web = "4.0.0-beta.5"
actix-web-httpauth = "0.6.0-beta.2"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5.3"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
mime = "0.3.16"
reqwest = { version = "0.11.4", features = ["json", "cookies"] }
scraper = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[features]
